--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/minitwofront/node_modules
-/servertwo/node_modules
+minitwofront/node_modules
+servertwo/node_modules
